# Charisma

./: Cargo.toml  LICENSE  README-DE.md  README.md
src/: api.rs  helpers.rs  lib.rs  main.rs  model.rs  request.rs  utils.rs
